Задание 4. Добавлен CI.Добавлен шаг с тестами

--- a/.github/workflows/gradle_build.yml
+++ b/.github/workflows/gradle_build.yml
@@ -25,3 +25,6 @@ jobs:
 
       - name: Build with Gradle Wrapper
         run: ./gradlew build
+
+      - name: Run test
+        run: ./gradlew test
